--- a/index.html
+++ b/index.html
@@ -533,11 +533,12 @@
                 2017.</p>
               <p class="text">I joined to Jotform in 2019 and had a chance to work in cross-functional teams. It is great to broaden the point of view in the areas other than programming.
                 I am happy contributing a Saas product and make work my code at scale.
+              </p>
+              <p class="text">
                 I have attended as an instructor to the Front-End Camp 2018, organised
                 by <a href="https://tazebt.com/" target="_blank">Taze.</a>
                 <a href="https://www.slideshare.net/CihanBaran1/temel-basic-html-ve-css-frontend-camp-2018"
                   target="_blank">Check out my presentation.</a>
-
               </p>
               <p class="text">Currently I have focused on ES2015, Angular and Webpack.
               </p>
