--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <ul class="list">
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
-                <p class="subtitle">React, Redux, Javascript (ES6), HTML, CSS, SASS, A/B Testing.
+                <p class="subtitle">React, Redux, Javascript (ES6), HTML, CSS, SASS, A/B Testing
                 </p>
                 <p class="text">I mostly develop components and follow the pragmatic approach to front-end. I am a
                   technology agnostic which basically means that I choose tools considering needs, budget and
@@ -489,7 +489,7 @@
               </li>
               <li class="item">
                 <h2 class="title">Other <br> Tools</h2>
-                <p class="subtitle">Fullstory, Hotjar, Test.IO, Figma, Trello, Miro.</p>
+                <p class="subtitle">Fullstory, Hotjar, Test.IO, Figma, Trello, Miro</p>
                 <p class="text">Being a part of a team is more than being just a developer. To be in-sync with other
                   team members is crucial. I use best tools in that purpose. I am able to solve minor
                   design needs by myself and capable to use Figma as a prototyping tool. I use miro to
@@ -539,8 +539,6 @@
                 by <a href="https://tazebt.com/" target="_blank">Taze.</a>
                 <a href="https://www.slideshare.net/CihanBaran1/temel-basic-html-ve-css-frontend-camp-2018"
                   target="_blank">Check out my presentation.</a>
-              </p>
-              <p class="text">Currently I have focused on ES2015, Angular and Webpack.
               </p>
               <ul class="list">
                 <li class="item">
