--- a/index.html
+++ b/index.html
@@ -474,8 +474,7 @@
             <ul class="list">
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
-                <p class="subtitle">React, Redux, Javascript (ES6), HTML, CSS, SASS, A/B Testing
-                </p>
+                <p class="subtitle">React, Redux, Redux-Thunk, Javascript (ES6), HTML, CSS, SASS, styled-components, A/B Testing</p>
                 <p class="text">I mostly develop components and follow the pragmatic approach to front-end. I am a
                   technology agnostic which basically means that I choose tools considering needs, budget and
                   time.</p>
