hide some content

--- a/index.html
+++ b/index.html
@@ -109,33 +109,33 @@
               </a>
             </li>
             <!-- item -->
-            <li class="item">
+            <!-- <li class="item">
               <a class="link" href="#project-5">
                 <h5 class="title">IOX Blend the Trend</h5>
                 <img src="dist/img/iox-blend-the-trend.jpg" alt="iox blend the trend page screen">
               </a>
-            </li>
+            </li> -->
             <!-- item -->
-            <li class="item">
+            <!-- <li class="item">
               <a class="link" href="#project-6">
                 <h5 class="title">MikroX Pre-Accountancy Website</h5>
                 <img src="dist/img/taze-mikrox.jpg" alt="mikrox website homepage screen">
               </a>
-            </li>
+            </li> -->
             <!-- item -->
-            <li class="item">
+            <!-- <li class="item">
               <a class="link" href="#project-7">
                 <h5 class="title">Userspots Fiat Case Study</h5>
                 <img src="dist/img/taze-fiat.jpg" alt="fiat case study homepage screen">
               </a>
-            </li>
+            </li> -->
             <!-- item -->
-            <li class="item">
+            <!-- <li class="item">
               <a class="link" href="#project-8">
                 <h5 class="title">Userspots Tofaş Case Study</h5>
                 <img src="dist/img/taze-tofas.jpg" alt="tofaş case study homepage screen">
               </a>
-            </li>
+            </li> -->
             <!-- item -->
             <!-- <li class="item">
               <a class="link" href="#project-8">
@@ -262,7 +262,7 @@
       </div>
     </section>
     <!-- project-5 blend-the-trend -->
-    <section id="project-5" class="page project-page">
+    <!-- <section id="project-5" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -275,7 +275,7 @@
               <p class="text">I have fetched the data of the cards and the categories with jQuery AJAX and rendered them
                 randomly based
                 on user's click event. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
-              <!-- <a class="link" href="javascript:" target="_blank">ioxdigital.com/blend-the-trend</a> -->
+              <a class="link" href="javascript:" target="_blank">ioxdigital.com/blend-the-trend</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -289,9 +289,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- project-6 microx -->
-    <section id="project-6" class="page project-page">
+    <!-- <section id="project-6" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -300,7 +300,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">I have delivered the front-end templates given by the design team at Taze. I have used
                 HTML, SCSS, jQuery, Gulp, npm and Git as a tech stack.</p>
-              <!-- <a class="link" href="javascript:" target="_blank">mikrox.com.tr</a> -->
+              <a class="link" href="javascript:" target="_blank">mikrox.com.tr</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -314,9 +314,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- project-7 fiat-case-study -->
-    <section id="project-7" class="page project-page">
+    <!-- <section id="project-7" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -327,7 +327,7 @@
                 done in a full screen transition form via a jQuery library. I also have worked on HTML and SCSS with
                 Gulp,
                 npm and Git.</p>
-              <!-- <a class="link" href="javascript:" target="_blank">userspots.com/cases/fiat</a> -->
+              <a class="link" href="javascript:" target="_blank">userspots.com/cases/fiat</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -341,9 +341,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- project-8 tofas-case-study-->
-    <section id="project-8" class="page project-page">
+    <!-- <section id="project-8" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -352,7 +352,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">Tofaş Case was a case study project for Userspots. It is a static website and It was one
                 of my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
-              <!-- <a class="link" href="javascript:" target="_blank">userspots.com/tofas-intranet</a> -->
+              <a class="link" href="javascript:" target="_blank">userspots.com/tofas-intranet</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -366,7 +366,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- project-9 uxcamp-->
     <!-- <section id="project-9" class="page project-page">
       <div class="container">
